# mindbrain-perso

./: .dockerignore  .env.example  .gitignore  .gitmodules  README.md  Roadmap.md  build.zig  build.zig.zon
data/sources/: README.md
datasets/: README.md
docker/: Dockerfile  Dockerfile.test  docker-compose.test.yml  docker-compose.yml
docker/init/: 01-init-postgres.sql
docs/: README.md  api-reference.md  audit-global.md  chunking.md  collections.md  demo-benchmark.md  document-profile.md  dsl-rules.md  faceted-hybrid-search.md  facets.md  graph-storage-audit.md  graph.md  installation.md  mb-documents-llm-test-env.md  native-reference.md  overview.md  pragma.md  projections.md  sop-analysis.md  sqlite-parity.md  standalone.md  third-party.md  workspace.md
docs/artifacts/: artifact-model.md  non-artifact-gaps-and-reports.md
docs/comparison/: README.md  api-comparison.md  (+1 more)
examples/rust/graph/: Cargo.toml  Makefile  README.md  run_tests.sh
examples/rust/graph/src/: client.rs  lib.rs
examples/rust/graph/tests/: integration_tests.rs
fixtures/: llm_context_budgets.json
scripts/: backend-immeuble.sh  compare-zig-toolchains.sh  demo-immeuble-gaps.sh  first-gaps-analysis.md  generate-stopwords-seed.mjs  llm-provider-live-smoke.sh  load-immeuble-demo.sh  prebuilds-all.sh  run-immeuble-structured-import-scenario.mjs  run-structured-import-system.mjs  seed-immeuble-projections.mjs  test-standalone-http-contract.sh
sql/: README.md  sqlite_mindbrain--1.0.0.sql
src/: main.zig
test/: run_all_tests.sh  smoke_install.sql
tools/: gen-schema-column-manifest.mjs
(+306 files in other folders)
